# my_back

./: CMakeLists.txt  README.md  data_base.cpp  data_base.h  database_connection.cpp  database_connection.h  json_creator.cpp  json_creator.h  main.cpp  socket.cpp  socket.h  socket_adapter.cpp  socket_adapter.h  template_query.cpp  template_query.h  template_query.h.autosave  test_server.cpp  test_server.h
